Fix shelf spacing mobile.

--- a/src/components/shelf/shelf.css
+++ b/src/components/shelf/shelf.css
@@ -80,7 +80,7 @@
 @media only screen and (max-width: 600px) {
     .shelf-container {
         padding-top: 0;
-        margin-top: -20px;
+        margin-top: 40px;
     }
     
     .columns {
